<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">科技大市场</string>
 
   <!-- umeng text config -->  
     <string name="search">搜索</string>
     <string name="use_exist_account">使用已有账号发表评论</string>
     <string name="qq_zone">QQ空间</string>
     <string name="tencent_wb">腾讯微博</string>
     <string name="sina_wb">新浪微博</string>
     <string name="renren">人人网</string>
     <string name="douban">豆瓣</string>
     <string name="unlogin_commit">匿名评论</string>
     <string name="cancel">取消</string>
     
     <string name="load_network">网络加载失败，请点击重试。</string>
     <string name="share_to">分享到</string>
     <string name="loding_more">正在加载更多</string>
     <string name="attention_wb">关注官方微博</string>
     <string name="say_someting">说点什么吧。。。</string>
     <string name="say_this">在这说点什么....</string>
     <string name="login_account">登录账号</string>
     <string name="anonymous_user">匿名用户</string>
     <string name="click_login">点击登录</string>
     <string name="share_setup">分享设置</string>
     <string name="umeng_weburl">http://www.umeng.com/</string>
     <string name="umeng_msg">MSG</string>
     <string name="one_days_ago">1 days ago</string>
     <string name="name">NAME</string>
     <string name="weixin">微信</string>
     <string name="friend">朋友圈</string>
     
     
     <string name="username">用户名</string>
     <string name="password">密 码</string>
     <string name="showpass">显示密码</string>
     <string name="findpass">找回密码</string>
	 <string name="home">主页</string>
	 <string name="market">大市场</string>
	 <string name="pronic">掌上创新</string>
	 <string name="mine">我的</string>
	 <string name="more">更多</string>
	 
	 <string name="hidepass">隐藏密码</string>
	 


</resources>
