<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/main_radio"
                android:layout_marginBottom="-10dip" >
            </FrameLayout>

            <RadioGroup
                android:id="@+id/main_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:background="@drawable/toolbar_bg"
                android:orientation="horizontal" >

                <FrameLayout style="@style/main_radiongroup_framelayout_style" >

                    <RadioButton
                        android:id="@+id/radio_button_home"
                        style="@style/main_radiongroup_radiobutton_style"
                        android:checked="true"
                        android:drawableTop="@drawable/home_btn_bg_selector"
                        android:text="@string/home" />
                </FrameLayout>

                <FrameLayout style="@style/main_radiongroup_framelayout_style" >

                    <RadioButton
                        android:id="@+id/radio_button_message"
                        style="@style/main_radiongroup_radiobutton_style"
                        android:drawableTop="@drawable/market_btn_bg_selector"
                        android:text="@string/market" />
                </FrameLayout>
				<!-- 这个framelayout占了一个位置 -->
                <FrameLayout style="@style/main_radiongroup_framelayout_style" >
                </FrameLayout>

                <FrameLayout style="@style/main_radiongroup_framelayout_style" >

                    <RadioButton
                        android:id="@+id/radio_button_friend"
                        style="@style/main_radiongroup_radiobutton_style"
                        android:drawableTop="@drawable/mime_btn_bg_selector"
                        android:text="@string/mine" />
                </FrameLayout>

                <FrameLayout style="@style/main_radiongroup_framelayout_style" >

                    <RadioButton
                        android:id="@+id/radio_button_more"
                        style="@style/main_radiongroup_radiobutton_style"
                        android:drawableTop="@drawable/more_btn_bg_selector"
                        android:text="@string/more" />
                    <!--
                       <TextView
                            android:id="@+id/tv_comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginRight="5dip"
                            android:background="@drawable/elem_bubble"
                            android:gravity="center"
                            android:textSize="8sp" />-->
                </FrameLayout>
            </RadioGroup>
            <!-- 把默认的选项卡隐藏掉，自己用RadioButton定义选项卡 -->
        </RelativeLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:visibility="gone" >
        </TabWidget>
    </TabHost>

    <FrameLayout
        android:id="@+id/btn_ck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@drawable/toolbar_write_bg" >

        <RadioButton
            android:id="@+id/radio_button_proketinoo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/pronnice_btn_bg_selector"
            android:gravity="center"
            android:paddingTop="8dip"
            android:text="@string/pronic"
            android:textColor="@color/color_radiobutton"
            android:textSize="11sp" />
    </FrameLayout>

</FrameLayout>